# mokai

./: CMakeLists.txt  Readme.md  compile_commands.json  get.sh  mokai.toml  todo.md
docs/content/docs/: index.mdx  meta.json
docs/content/docs/architecture/: how-mokai-builds.mdx  meta.json  performance-tuning.mdx
docs/content/docs/build-system/: dependencies.mdx  hooks-and-file-groups.mdx  meta.json
docs/content/docs/config/: compatibility-matrix.mdx  conditional-compilation.mdx  meta.json  output-layout.mdx
docs/content/docs/features/: meta.json  profiles.mdx
docs/src/components/: mdx.tsx
src/: entery.cpp
src/backend/: toolchain.cpp  toolchain.hpp
src/cli/: cli.cpp  cli.hpp  registery.cpp
src/config/: config.cpp  config.hpp
src/core/: os.cpp  os.hpp
src/docs/: spec.toml
src/graph/: graph.cpp  graph.hpp  graphBuildPipeline.cpp  graphCache.cpp  graphSeralize.cpp
src/graph/compiler/: ClangCompiler.hpp  GccCompiler.hpp  Icompiler.hpp  MsvcCompiler.hpp  ToolChainFinder.cpp  ToolChainFinder.hpp
src/graph/condition/: ConditionEval.cpp  ConditionEval.hpp
src/log/: log.cpp
src/tests/: conditions.cpp
